--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", "\"https://pokeapi.co/api/v2/\""
+            buildConfigField "String", "IMAGE_URL", "\"https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/\""
+        }
+        debug {
+            minifyEnabled false
+            buildConfigField "String", "BASE_URL", "\"https://pokeapi.co/api/v2/\""
+            buildConfigField "String", "IMAGE_URL", "\"https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/\""
         }
     }
     compileOptions {
